--- a/siak/web/WEB-INF/pages/irs/aktifmhs/pageList.zul
+++ b/siak/web/WEB-INF/pages/irs/aktifmhs/pageList.zul
@@ -33,11 +33,15 @@
                         <listheader id="listheader_filed3"
 							sclass="FDListBoxHeader1" image="/images/icons/create_doc.gif"
 							label="Nim" sort="auto"
-							width="25%" />
+							width="20%" />
 						<listheader id="listheader_filed4"
 							sclass="FDListBoxHeader1" image="/images/icons/create_doc.gif"
 							label="Trem" sort="auto"
-							width="35%" />
+							width="20%" />
+                        <listheader id="listheader_filed5"
+							sclass="FDListBoxHeader1" image="/images/icons/create_doc.gif"
+							label="Tahun Ajaran" sort="auto"
+							width="20%" />
 					</listhead>
 
 					<listitem self="@{each='data'}" value="@{data}" forward="onDoubleClick=onDoubleClickedItem">
@@ -45,6 +49,7 @@
 						<listcell label="@{data.dtglsurat}" style="padding-left: 5px" />
 						<listcell label="@{data.mmahasiswa.cnim}" style="padding-left: 5px" />
 						<listcell label="@{data.cterm}" style="padding-left: 5px" />
+                        <listcell label="@{data.cthajar}" style="padding-left: 5px" />
 					</listitem>
 				</listbox>
 			</center>
