--- a/trunk/siak/web/WEB-INF/pages/kurikulum/updateKurikulumProdi/kurikulumProdiDetail.zul
+++ b/trunk/siak/web/WEB-INF/pages/kurikulum/updateKurikulumProdi/kurikulumProdiDetail.zul
@@ -94,47 +94,29 @@
                                         </hbox>
                                     </row>
                                     <row>
-                                        <separator bar="true"></separator>
-                                        <separator bar="true"></separator>
-                                    </row>
-                                    <row>
-                                        <hbox>
-                                            <label value="Kode Kurikulum"/>
-                                            <label value="*" style="color:red;font-size:10px"/>
-                                        </hbox>
-                                        <hbox pack="stretch">
-                                            <textbox
-                                                    id="txtb_code"
-                                                    value="@{controller.kurikulumMahasiswa.mkurikulum.ckodekur}"
-                                                    readonly="true" maxlength="20" width="100px"/>
-                                            <!--button
-                                                    id="btnSearchCodeExtended" disabled="true"
-                                                    width="28px"
-                                                    image="/images/icons/btn_search2_16x16.gif"
-                                                    tooltiptext="Cari Kode Kurikulum"/-->
-                                        </hbox>
-                                    </row>
-                                    <row>
                                         <hbox>
                                             <label
-                                                value="${c:l('label_KurikulumMahasiswaDialog_cohort.value')}" />
+                                                value="Nama" />
                                             <label value="*"
                                                 style="color:red;font-size:10px" />
                                         </hbox>
-                                        <textbox
-                                            id="txtb_cohort"
-                                            value="@{controller.kurikulumMahasiswa.ccohort}" readonly="true"
-                                            constraint="no empty" maxlength="50" width="100px" />
+                                        <hbox>
+                                            <textbox id="txtb_nama" value="@{controller.kurikulumMahasiswa.mmahasiswa.cnama}" readonly="true"  maxlength="50" width="120px%"/>
+                                       </hbox>
+                                    </row>
+                                    <row>
+                                        <separator bar="true"></separator>
+                                        <separator bar="true"></separator>
                                     </row>
                                     <row>
                                         <hbox>
-                                            <label value="Program Studi"/>
+                                            <label value="Program Studi Lama"/>
                                             <label value="*" style="color:red;font-size:10px"/>
                                         </hbox>
                                         <hbox pack="stretch" width="50%">
                                             <textbox
                                                     id="txtb_prodi"
-                                                    value="@{controller.kurikulumMahasiswa.mprodi.cnmprogst}"
+                                                    value="@{controller.kurikulumMahasiswa.mprodi.ckdprogst}"
                                                     readonly="true" maxlength="50" width="99%"/>
                                             <!--button
                                                     id="btnSearchProdiExtended" disabled="true"
@@ -144,14 +126,60 @@
                                         </hbox>
                                     </row>
                                     <row>
-                                        <label
-                                            value="${c:l('label_KurikulumMahasiswaDialog_thajar.value')}" />
-                                        <textbox
-                                            id="txtb_thajar" value="@{controller.kurikulumMahasiswa.cthajar}"
-                                            readonly="true" maxlength="8" width="100px" />
+                                        <hbox>
+                                            <label value="Nama Prodi Lama"/>
+                                            <label value="*" style="color:red;font-size:10px"/>
+                                        </hbox>
+                                        <hbox pack="stretch" width="50%">
+                                            <textbox
+                                                    id="txtb_namaprodi"
+                                                    value="@{controller.kurikulumMahasiswa.mprodi.cnmprogst}"
+                                                    readonly="true" maxlength="50" width="99%"/>
+                                        </hbox>
                                     </row>
                                     <row>
-                                        <label value="Term"/>
+                                        <hbox>
+                                            <label value="Nama Sekolah Lama"/>
+                                            <label value="*" style="color:red;font-size:10px"/>
+                                        </hbox>
+                                        <hbox pack="stretch" width="50%">
+                                            <textbox
+                                                    id="txtb_namasekolah"
+                                                    value="@{controller.kurikulumMahasiswa.mprodi.msekolah.cnamaSekolah}"
+                                                    readonly="true" maxlength="50" width="99%"/>
+                                        </hbox>
+                                    </row>
+                                    <row>
+                                        <hbox>
+                                            <label value="Kode Kurikulum Lama"/>
+                                            <label value="*" style="color:red;font-size:10px"/>
+                                        </hbox>
+                                        <hbox pack="stretch">
+                                            <textbox
+                                                    id="txtb_code"
+                                                    value="@{controller.kurikulumMahasiswa.mkurikulum.ckodekur}"
+                                                    readonly="true" maxlength="20" width="100px"/>
+                                            <!--button
+                                                    id="btnSearchCodeExtended" di
+                                    <row>
+                                        <hbox>
+                                            <label value="Nama Konsentrasi"/>
+                                            <label value="*" style="color:red;font-size:10px"/>
+                                        </hbox>
+                                        <hbox pack="stretch" width="50%">
+                                            <textbox
+                                                    id="txtb_namakonsentrasi"
+                                                    value="@{controller.kurikulumMahasiswa.mkurikulum.mpeminatan.cnmminat}"
+                                                    readonly="true" maxlength="50" width="99%"/>
+                                        </hbox>
+                                    </row>sabled="true"
+                                                    width="28px"
+                                                    image="/images/icons/btn_search2_16x16.gif"
+                                                    tooltiptext="Cari Kode Kurikulum"/-->
+                                        </hbox>
+                                    </row>
+                                    <row>
+                                        <label value="Term Masuk Lama"/>
                                         <hbox>
                                             <textbox id="txtb_term" value="@{controller.kurikulumMahasiswa.cterm}"
                                                     readonly="true" maxlength="4" width="50px" />
@@ -163,8 +191,81 @@
                                         </hbox>
                                     </row>
                                     <row>
+                                        <hbox>
+                                            <label
+                                                value="Cohort Lama" />
+                                            <label value="*"
+                                                style="color:red;font-size:10px" />
+                                        </hbox>
+                                        <textbox
+                                            id="txtb_cohort"
+                                            value="@{controller.kurikulumMahasiswa.ccohort}" readonly="true"
+                                            constraint="no empty" maxlength="50" width="100px" />
+                                    </row>
+                                    <row>
+                                        <label
+                                            value="${c:l('label_KurikulumMahasiswaDialog_thajar.value')}" />
+                                        <textbox
+                                            id="txtb_thajar" value="@{controller.kurikulumMahasiswa.cthajar}"
+                                            readonly="true" maxlength="8" width="100px" />
+                                    </row>
+                                    <row>
                                         <separator bar="true"></separator>
                                         <separator bar="true"></separator>
+                                    </row>
+                                    <row>
+                                        <hbox>
+                                            <label value="Program Studi Baru"/>
+                                            <label value="*" style="color:red;font-size:10px"/>
+                                        </hbox>
+                                        <hbox pack="stretch" width="50%">
+                                            <textbox
+                                                    id="txtb_kodeprodiBaru"
+                                                    readonly="true" maxlength="50" width="100px"/>
+                                            <!--button
+                                                    id="btnSearchProdiExtended" disabled="true"
+                                                    width="28px"
+                                                    image="/images/icons/btn_search2_16x16.gif"
+                                                    tooltiptext="Cari Prodi"/-->
+                                        </hbox>
+                                    </row>
+                                    <row>
+                                        <hbox>
+                                            <label value="Nama Prodi Baru"/>
+                                            <label value="*" style="color:red;font-size:10px"/>
+                                        </hbox>
+                                        <hbox pack="stretch" width="50%">
+                                            <textbox
+                                                    id="txtb_prodiBaru"
+                                                    readonly="true" maxlength="50" width="99%"/>
+                                            <button
+                                                    id="btnSearchProdiExtended" disabled="true"
+                                                    width="28px"
+                                                    image="/images/icons/btn_search2_16x16.gif"
+                                                    tooltiptext="Cari Prodi"/>
+                                        </hbox>
+                                    </row>
+                                    <row>
+                                        <hbox>
+                                            <label value="Nama Sekolah Baru"/>
+                                            <label value="*" style="color:red;font-size:10px"/>
+                                        </hbox>
+                                        <hbox pack="stretch" width="50%">
+                                            <textbox
+                                                    id="txtb_namasekolahbaru"
+                                                    readonly="true" maxlength="50" width="99%"/>
+                                        </hbox>
+                                    </row>
+                                    <row>
+                                        <hbox>
+                                            <label value="Konsentrasi"/>
+                                            <label value="*" style="color:red;font-size:10px"/>
+                                        </hbox>
+                                        <hbox pack="stretch" width="50%">
+                                            <textbox
+                                                    id="txtb_namakonsentrasibaru"
+                                                    readonly="true" maxlength="50" width="99%"/>
+                                        </hbox>
                                     </row>
                                     <row>
                                         <hbox>
@@ -183,40 +284,6 @@
                                         </hbox>
                                     </row>
                                     <row>
-                                        <hbox>
-                                            <label
-                                                value="Cohort Baru" />
-                                            <label value="*"
-                                                style="color:red;font-size:10px" />
-                                        </hbox>
-                                        <textbox
-                                            id="txtb_cohortBaru" readonly="true"
-                                            constraint="no empty" maxlength="50" width="100px" />
-                                    </row>
-                                    <row>
-                                        <hbox>
-                                            <label value="Program Studi Baru"/>
-                                            <label value="*" style="color:red;font-size:10px"/>
-                                        </hbox>
-                                        <hbox pack="stretch" width="50%">
-                                            <textbox
-                                                    id="txtb_prodiBaru"
-                                                    readonly="true" maxlength="50" width="99%"/>
-                                            <button
-                                                    id="btnSearchProdiExtended" disabled="true"
-                                                    width="28px"
-                                                    image="/images/icons/btn_search2_16x16.gif"
-                                                    tooltiptext="Cari Prodi"/>
-                                        </hbox>
-                                    </row>
-                                    <row>
-                                        <label
-                                            value="Tahun Ajaran Baru" />
-                                        <textbox
-                                            id="txtb_thajarBaru"
-                                            readonly="true" maxlength="8" width="100px" />
-                                    </row>
-                                    <row>
                                         <label value="Term Baru"/>
                                         <hbox>
                                             <textbox id="txtb_termBaru"
@@ -227,6 +294,24 @@
                                                     image="/images/icons/btn_search2_16x16.gif"
                                                     tooltiptext="Cari Term"/>
                                         </hbox>
+                                    </row>
+                                    <row>
+                                        <label
+                                            value="Tahun Ajaran Baru" />
+                                        <textbox
+                                            id="txtb_thajarBaru"
+                                            readonly="true" maxlength="8" width="100px" />
+                                    </row>
+                                    <row>
+                                        <hbox>
+                                            <label
+                                                value="Cohort Baru" />
+                                            <label value="*"
+                                                style="color:red;font-size:10px" />
+                                        </hbox>
+                                        <textbox
+                                            id="txtb_cohortBaru" readonly="true"
+                                            constraint="no empty" maxlength="50" width="100px" />
                                     </row>
                                 </rows>
                             </grid>
