--- a/trunk/siak/web/WEB-INF/pages/administrasi/pegawai/mpegawaiList.zul
+++ b/trunk/siak/web/WEB-INF/pages/administrasi/pegawai/mpegawaiList.zul
@@ -57,9 +57,9 @@
 							style="padding-left: 5px" />
 						<listcell label="@{mpegawai.cnama}"
 							style="padding-left: 5px" />
-						<listcell label="@{mpegawai.dtglahir}"
+						<listcell label="@{mpegawai.cemail}"
 							style="padding-left: 5px" />
-						<listcell label="@{mpegawai.cstatus}"
+						<listcell label="@{mpegawai.cflagaktif}"
 							style="padding-left: 5px" />
 					</listitem>
 
